--- a/.config/dns-server/unbound/conf/custom.conf
+++ b/.config/dns-server/unbound/conf/custom.conf
@@ -22,6 +22,8 @@ server:
     do-udp: yes
     do-tcp: yes
 
+    access-control: 172.20.0.0/24 allow
+
     # Privacy settings
     hide-identity: yes
     hide-version: yes
