--- a/.config/dns-server/unbound/conf/custom.conf
+++ b/.config/dns-server/unbound/conf/custom.conf
@@ -23,13 +23,14 @@ server:
     do-tcp: yes
 
     access-control: 172.20.0.0/24 allow
+    access-control: 127.0.0.1/32 allow
 
     # Privacy settings
     hide-identity: yes
     hide-version: yes
 
     # DNSSEC validation
-    auto-trust-anchor-file: "/var/lib/unbound/root.key"
+    auto-trust-anchor-file: "/opt/unbound/etc/unbound/root.key"
     trust-anchor-signaling: yes
     root-hints: "/opt/unbound/etc/unbound/root.hints"
     
@@ -39,10 +40,10 @@ server:
     num-queries-per-thread: 32
     
     # ISP Fallback DNS (Only used if DNSSEC validation fails)
-    #forward-zone:
-    #    name: "."
-    #    forward-addr: 7.7.7.7
-    #    forward-addr: 3.3.3.3
+    forward-zone:
+        name: "."
+        forward-addr: 7.7.7.7
+        forward-addr: 3.3.3.3
 
 include: /opt/unbound/etc/unbound/a-records.conf
 include: /opt/unbound/etc/unbound/forward-records.conf
