--- a/.config/dns-server/docker-compose.yml
+++ b/.config/dns-server/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       dns_network:
         ipv4_address: 172.20.0.2
     volumes:
+      - ./unbound/root.hints:/opt/unbound/etc/unbound/root.hints:ro
+      - ./unbound/root.key:/opt/unbound/etc/unbound/root.key:ro
       - ./unbound/conf:/opt/unbound/etc/unbound/custom
       - ./unbound/a-records.conf:/opt/unbound/etc/unbound/a-records.conf
       - ./unbound/forward-records.conf:/opt/unbound/etc/unbound/forward-records.conf
