--- a/.config/dns-server/unbound/conf/custom.conf
+++ b/.config/dns-server/unbound/conf/custom.conf
@@ -1,49 +1,22 @@
-server:
-    # If no logfile is specified, syslog is used
-    # logfile: "/var/log/unbound/unbound.log"
-    verbosity: 5
+# Network configuration
+interface: 0.0.0.0
+port: 53
+do-ip4: yes
+do-udp: yes
+do-tcp: yes
 
-    # Optimize for low memory usage
-    msg-cache-slabs: 2
-    rrset-cache-slabs: 2
-    infra-cache-slabs: 2
-    key-cache-slabs: 2
+# Explicit forward zone configuration
+forward-zone:
+    name: "."
+    forward-addr: 1.1.1.1   # Cloudflare
+    forward-addr: 8.8.8.8   # Google
+    forward-addr: 9.9.9.9   # Quad9
 
-    # Memory optimization
-    rrset-cache-size: 4m
-    msg-cache-size: 2m
-    so-rcvbuf: 4m
-    so-sndbuf: 4m
+# Access control
+access-control: 172.20.0.0/24 allow
+access-control: 127.0.0.1/32 allow
 
-    # Serve clients on all network interfaces, including docker
-    interface: 0.0.0.0
-    port: 53
-    do-ip4: yes
-    do-udp: yes
-    do-tcp: yes
-
-    access-control: 172.20.0.0/24 allow
-    access-control: 127.0.0.1/32 allow
-
-    # Privacy settings
-    hide-identity: yes
-    hide-version: yes
-
-    # DNSSEC validation
-    auto-trust-anchor-file: "/opt/unbound/etc/unbound/root.key"
-    trust-anchor-signaling: yes
-    root-hints: "/opt/unbound/etc/unbound/root.hints"
-    
-    # Limited optimizations for Orange Pi 3 LTS
-    num-threads: 2
-    outgoing-range: 32
-    num-queries-per-thread: 32
-    
-    # ISP Fallback DNS (Only used if DNSSEC validation fails)
-    forward-zone:
-        name: "."
-        forward-addr: 7.7.7.7
-        forward-addr: 3.3.3.3
-
-include: /opt/unbound/etc/unbound/a-records.conf
-include: /opt/unbound/etc/unbound/forward-records.conf
+# DNSSEC and trust configuration
+auto-trust-anchor-file: "/opt/unbound/etc/unbound/root.key"
+trust-anchor-signaling: yes
+root-hints: "/opt/unbound/etc/unbound/root.hints"
