--- a/.config/dns-server/unbound/conf/custom.conf
+++ b/.config/dns-server/unbound/conf/custom.conf
@@ -23,6 +23,7 @@ server:
     do-tcp: yes
 
     access-control: 172.20.0.0/24 allow
+    access-control: 127.0.0.1/32 allow
 
     # Privacy settings
     hide-identity: yes
