--- a/.config/dns-server/unbound/conf/custom.conf
+++ b/.config/dns-server/unbound/conf/custom.conf
@@ -1,7 +1,7 @@
 server:
     # If no logfile is specified, syslog is used
     # logfile: "/var/log/unbound/unbound.log"
-    verbosity: 5
+    verbosity: 0
 
     # Optimize for low memory usage
     msg-cache-slabs: 2
@@ -23,7 +23,7 @@ server:
     do-tcp: yes
 
     access-control: 172.20.0.0/24 allow
-    access-control: 127.0.0.1/32 allow
+    #access-control: 127.0.0.1/32 allow
 
     # Privacy settings
     hide-identity: yes
