Local DNS records

--- a/.config/dns-server/unbound/a-records.conf
+++ b/.config/dns-server/unbound/a-records.conf
@@ -10,7 +10,44 @@ server:
     local-data: "pihole.memedition.com. IN A 192.168.88.8"
     local-data-ptr: "192.168.88.8 pihole.memedition.com"
     
-    # You can add more local records here as needed
-    # Example:
-    # local-data: "mydevice.lan. IN A 192.168.88.x"
-    # local-data-ptr: "192.168.88.x mydevice.lan"
+    # DEVICES Group
+    # Artur PC
+    local-data: "artur-pc.local. IN A 192.168.88.81"
+    local-data-ptr: "192.168.88.81 artur-pc.local"
+    
+    # Galina Phone
+    local-data: "galina-phone.local. IN A 192.168.88.73"
+    local-data-ptr: "192.168.88.73 galina-phone.local"
+    
+    # Kira Phone
+    local-data: "kira-phone.local. IN A 192.168.88.72"
+    local-data-ptr: "192.168.88.72 kira-phone.local"
+    
+    # Lena Phone
+    local-data: "lena-phone.local. IN A 192.168.88.70"
+    local-data-ptr: "192.168.88.70 lena-phone.local"
+    
+    # Philips TV
+    local-data: "philips-tv.local. IN A 192.168.88.78"
+    local-data-ptr: "192.168.88.78 philips-tv.local"
+    
+    # Sonya Phone
+    local-data: "sonya-phone.local. IN A 192.168.88.71"
+    local-data-ptr: "192.168.88.71 sonya-phone.local"
+    
+    # Services on Orange Pi (to be resolved by Caddy)
+    # Home Assistant
+    local-data: "ha.memedition.com. IN A 192.168.88.8"
+    local-data-ptr: "192.168.88.8 ha.memedition.com"
+    
+    # PC Remote
+    local-data: "pc.memedition.com. IN A 192.168.88.8"
+    local-data-ptr: "192.168.88.8 pc.memedition.com"
+    
+    # Gitea
+    local-data: "git.memedition.com. IN A 192.168.88.8"
+    local-data-ptr: "192.168.88.8 git.memedition.com"
+
+    # Stable Diffusion
+    local-data: "stable.memedition.com. IN A 192.168.88.8"
+    local-data-ptr: "192.168.88.8 stable.memedition.com"
