--- a/.config/dns-server/unbound/conf/custom.conf
+++ b/.config/dns-server/unbound/conf/custom.conf
@@ -40,10 +40,10 @@ server:
     num-queries-per-thread: 32
     
     # ISP Fallback DNS (Only used if DNSSEC validation fails)
-    forward-zone:
-        name: "."
-        forward-addr: 7.7.7.7
-        forward-addr: 3.3.3.3
+    #forward-zone:
+    #    name: "."
+    #    forward-addr: 7.7.7.7
+    #    forward-addr: 3.3.3.3
 
 include: /opt/unbound/etc/unbound/a-records.conf
-include: /opt/unbound/etc/unbound/forward-records.conf
+#include: /opt/unbound/etc/unbound/forward-records.conf
