--- a/.config/caddy/Caddyfile
+++ b/.config/caddy/Caddyfile
@@ -6,5 +6,10 @@
 	}
 }
 
+pihole.memedition.com {
+	reverse_proxy 172.20.0.3:80
+	tls /etc/caddy/certs/cert.pem /etc/caddy/certs/key.pem
+}
+
 # Import site configurations
-import /etc/caddy/sites/*.caddy
+# import /etc/caddy/sites/*.caddy
