Update DNS records for Caddy integration

--- a/.config/dns-server/unbound/a-records.conf
+++ b/.config/dns-server/unbound/a-records.conf
@@ -9,6 +9,10 @@ server:
     # Pi-hole
     local-data: "pihole.memedition.com. IN A 192.168.88.8"
     local-data-ptr: "192.168.88.8 pihole.memedition.com"
+
+    # Caddy Server
+    local-data: "caddy.memedition.com. IN A 192.168.88.8"
+    local-data-ptr: "192.168.88.8 caddy.memedition.com"
     
     # DEVICES Group
     # Artur PC
