--- a/.config/dns-server/docker-compose.yml
+++ b/.config/dns-server/docker-compose.yml
@@ -73,8 +73,8 @@ services:
       - "443:443/tcp"
       - "8081:8081/tcp"  # Added this line to expose port 8081
     volumes:
-      - /opt/dns-server/caddy/Caddyfile:/etc/caddy/Caddyfile:ro
-      - /opt/dns-server/caddy/sites:/etc/caddy/sites:ro
+      - /home/opilts/.config/dns-server/caddy/Caddyfile:/etc/caddy/Caddyfile:ro
+      - /home/opilts/.config/dns-server/caddy/sites:/etc/caddy/sites:ro
       - /opt/dns-server/caddy/data:/data
     environment:
       - TZ=Europe/Kiev
