--- a/.config/dns-server/unbound/conf/custom.conf
+++ b/.config/dns-server/unbound/conf/custom.conf
@@ -21,8 +21,11 @@ server:
     do-ip4: yes
     do-udp: yes
     do-tcp: yes
+    do-ip6: yes
+    interface: ::0
 
     access-control: 172.20.0.0/24 allow
+    access-control: fd88:abcd::/64 allow
     #access-control: 127.0.0.1/32 allow
 
     # Privacy settings
