--- a/.config/dns-server/docker-compose.yml
+++ b/.config/dns-server/docker-compose.yml
@@ -3,6 +3,10 @@ version: '3'
 networks:
   dns_network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/24
+        - subnet: fd88:abcd::/64
 
 services:
   unbound:
@@ -33,6 +37,7 @@ services:
     networks:
       dns_network:
         ipv4_address: 172.20.0.3
+        ipv6_address: fd88:abcd::53
     ports:
       - "53:53/tcp"
       - "53:53/udp"
