unbound problem solving

--- a/.config/dns-server/unbound/conf/custom.conf
+++ b/.config/dns-server/unbound/conf/custom.conf
@@ -1,7 +1,7 @@
 server:
     # If no logfile is specified, syslog is used
     # logfile: "/var/log/unbound/unbound.log"
-    verbosity: 0
+    verbosity: 2
 
     # Optimize for low memory usage
     msg-cache-slabs: 2
@@ -40,10 +40,10 @@ server:
     num-queries-per-thread: 32
     
     # ISP Fallback DNS (Only used if DNSSEC validation fails)
-    #forward-zone:
-    #    name: "."
-    #    forward-addr: 7.7.7.7
-    #    forward-addr: 3.3.3.3
+    forward-zone:
+        name: "."
+        forward-addr: 1.1.1.1
+        forward-addr: 8.8.8.8
 
 include: /opt/unbound/etc/unbound/a-records.conf
 #include: /opt/unbound/etc/unbound/forward-records.conf
