--- a/.config/dns-server/docker-compose.yml
+++ b/.config/dns-server/docker-compose.yml
@@ -1,9 +1,5 @@
 version: '3'
 
-networks:
-  dns_network:
-    driver: bridge
-
 services:
   unbound:
     container_name: unbound
@@ -87,6 +83,9 @@ services:
 
 networks:
   dns_network:
+    driver: bridge
+    enable_ipv6: true
     ipam:
       config:
         - subnet: 172.20.0.0/24
+        - subnet: fd00:20::/64
