--- a/.config/dns-server/unbound/conf/custom.conf
+++ b/.config/dns-server/unbound/conf/custom.conf
@@ -1,7 +1,7 @@
 server:
     # If no logfile is specified, syslog is used
     # logfile: "/var/log/unbound/unbound.log"
-    verbosity: 2
+    verbosity: 0
 
     # Optimize for low memory usage
     msg-cache-slabs: 2
@@ -17,13 +17,15 @@ server:
 
     # Serve clients on all network interfaces, including docker
     interface: 0.0.0.0
+    interface: ::
     port: 53
     do-ip4: yes
     do-udp: yes
     do-tcp: yes
+    do-ip6: yes
 
-    access-control: 172.20.0.0/24 allow
-    #access-control: 127.0.0.1/32 allow
+    access-control: 0.0.0.0/0 allow
+    access-control: ::/0 allow
 
     # Privacy settings
     hide-identity: yes
@@ -42,8 +44,10 @@ server:
     # ISP Fallback DNS (Only used if DNSSEC validation fails)
     forward-zone:
         name: "."
-        forward-addr: 1.1.1.1
-        forward-addr: 8.8.8.8
+        forward-addr: 2001:4860:4860::8888  # Google IPv6
+        forward-addr: 2606:4700:4700::1111  # Cloudflare IPv6
+        forward-addr: 8.8.8.8  # Google IPv4 (fallback)
+        forward-addr: 1.1.1.1  # Cloudflare IPv4 (fallback)
 
 include: /opt/unbound/etc/unbound/a-records.conf
 #include: /opt/unbound/etc/unbound/forward-records.conf
